     stopped thread.

  ** '-thread-execution-mask'

     Added new MI command for getting thread execution mask.

  ** Added 'hit-lanes-mask' field to '-thread-info' output.

     If the '-thread-info' output contains a thread which is stopped at a
     breakpoint, and the thread has SIMD lanes, 'hit-lanes-mask' field contains
     a hex mask of the SIMD lanes which were hit by the breakpoint.

* New remote packets

qXfer:libraries:read's response

  The qXfer:libraries:read query supports reporting in-memory libraries.  GDB
  indicates support by supplying qXfer:libraries:read:in-memory-library+ in the
  qSupported packet.

vAck:library
vAck:in-memory-library

  Acknowledge libraries to gdbserver when requested.  Libraries are acknowledged
  after the initial processing by GDB such as loading symbols and placing
  breakpoints.

U stop reply

  Indicates that threads are currently unavailable.  We tried stopping them but
  they did not respond.  The remote stub reports support for this stop reply to
  GDB's qSupported query.

qFixedThreadList

  Query packet to check if the target's thread list is fixed.

*** Changes in GDB 14

* GDB now supports the AArch64 Scalable Matrix Extension 2 (SME2), which
  includes a new 512 bit lookup table register named ZT0.

* GDB now supports the AArch64 Scalable Matrix Extension (SME), which includes
  a new matrix register named ZA, a new thread register TPIDR2 and a new vector
  length register SVG (streaming vector granule).  GDB also supports tracking
  ZA state across signal frames.

  Some features are still under development or are dependent on ABI specs that
  are still in alpha stage.  For example, manual function calls with ZA state
  don't have any special handling, and tracking of SVG changes based on
  DWARF information is still not implemented, but there are plans to do so in
  the future.

* GDB now recognizes the NO_COLOR environment variable and disables